--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ endif()
 
 set (CMAKE_CXX_STANDARD 11)
 
-#include_directories(include)
+include_directories(include)
 
 file(GLOB SOURCES "src/*.cc")
 
